--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -421,4 +421,23 @@
     <string name="deceased_patient_dialog_text">If you click this checkbox then you cannot modify deceased patient\'s data.</string>
     <string name="add_opd">ADD OPD</string>
 
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="mice">Mice</string>
+    <string name="add">Add</string>
+    <string name="speech_prompt">Say something&#8230;</string>
+    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
+    <string name="tap_on_mic">Tap on mic to speak</string>
+    <string name="message">Press the speak button and say something..</string>
+    <string name="title_activity_prescription">Prescription</string>
+
+    <string name="medicine_type">Medicine Type</string>
+    <string name="breakfast">Breakfast</string>
+    <string name="medicine_name">Medicine Name</string>
+    <string name="lunch">Lunch</string>
+    <string name="dinner">Dinner</string>
+    <string name="dose">Dose</string>
+    <string name="days">Days</string>
+    <string name="instruction">Instruction</string>
+
 </resources>
